--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 </head>
 <body class="body-1">
 <header>
-<div class="dc"><img class="icons2" src="images/logo1.png" alt="icon"/></div> <!-- src="Ссылка на изображение" alt="Название изображения" -->
+
+        <img class="icons" src="images/logo1.png" alt="icon"/> 
+     
+	<p class="block-one"> Сайт  профориентации по специальности технология машиностроения</p> <!-- абзац -->
+	
 </header>
 
-<!--<img class="icons" src="images/icon2.png" alt="icon"/> src="Ссылка на изображение" alt="Название изображения" -->
 
-	<p class="block-one">Сайт для целей профориентации</p> <!-- абзац -->
-	<p class="block-one2">по специальности технология машиностроения</p> <!-- абзац -->
 	<div class="kpposition">
 	<input type="button" name="btn1" class="kp1 kph kpa" value="Описание отрасли машиностроения" onclick="one()">
 	<input type="button" name="btn2" class="kp2 kph kpa" value="История машиностроения в мире, в России" onclick="two()">
@@ -30,11 +31,13 @@
 	<input type="button" name="btn4" class="kp4 kph kpa" value="Справочник машиностроительных предприятий СПБ" onclick="four()">
 	<input type="button" name="btn5" class="kp5 kph kpa" value="Паспорта профессий" onclick="five()">
 	<input type="button" name="btn6" class="kp6 kph kpa" value="Игра «Металлорежущие станки»" onclick="six()">
-	<input type="button" name="btn7" class="kp7 kph kpa" value="Кроссворд термины в машиностроении" onclick="seven()">
+	<input type="button" name="btn7" class="kp7 kph kpa" value="Кроссворд «Термины в машиностроении»" onclick="seven()">
 	</div>
-	<div class="avtor">
-	<p>Автор проекта:</p>
-	<p>Кернович Кирилл</p>
-	</div>
+	<div class="karta2"><iframe src="https://www.google.com/maps/d/embed?mid=1EWwXiqw5kew5lSdwA6ag3GzGO4I7h1Vz&ehbc=2E312F" width="520" height="380"></iframe></div>
+	<input type="button" name="btn7" class="kpform kph kpa" value="Оставить заявку" id="opf" onclick="openform()">
+	                 <!--<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScIVM6tiCBlL-Zr1zgSR29ncwfSCc7VmNIPaAgW3ZoF2raX0Q/viewform?embedded=true" class="forma" width="400" height="550" frameborder="0" marginheight="0" marginwidth="0" id="forms">Загрузка…</iframe>"-->
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSewA95frNi0Xb0PH6jQ_u8URbgBIDhrmy6KsTrgoKi2v-c7Dg/viewform?embedded=true" class="forma" width="400" height="550" frameborder="0" marginheight="0" marginwidth="0" id="forms">Загрузка…</iframe>
+	<p class="avtor">Автор проекта: Кернович Кирилл</p>
+	
 </body>
 </html>
