--- a/игра/six.html
+++ b/игра/six.html
@@ -24,7 +24,7 @@
     <col span="4"style="background-color: #ddd;"><!-- Задаем цвет фона для следующего столбца таблицы-->
   </colgroup>
 
-  <caption class="captionp">Игра на тему «Металлорежущие станки»</caption>
+  <caption class="captionp">Игра «Металлорежущие станки»</caption>
 
   <tr>
     <th class="thp">Техника безопасности</th>
