--- a/описание/one.html
+++ b/описание/one.html
@@ -30,17 +30,17 @@
   <img src="../images/фотографии/16.jpg" alt="img" class="leftpic"/>
   <img src="../images/фотографии/17.jpg" alt="img" class="leftpic"/>
   <img src="../images/фотографии/18.jpg" alt="img" class="leftpic"/>
-  <p class="osngl">«Описание отрасли Машиностроение»</p>
-  <p class="osnp">Машиностроение<a class="osng"> — вид производственной деятельности предприятий обрабатывающей промышленности и сферы услуг, специализирующихся на проектировании, производстве, обслуживании и утилизации всевозможных машин, технологического оборудования и их деталей.</a></p>
+  <p class="istgl">«Описание отрасли Машиностроение»</p>
+  <p class="istp">Машиностроение<a class="istg"> — вид производственной деятельности предприятий обрабатывающей промышленности и сферы услуг, специализирующихся на проектировании, производстве, обслуживании и утилизации всевозможных машин, технологического оборудования и их деталей.</a></p>
 
-  <p class="osnp">Машиностроение делится на три группы:</p>
-  <ul class="osnn">
+  <p class="istp">Машиностроение делится на три группы:</p>
+  <ul class="istn">
   <li>трудоёмкое; </li>
   <li>металлоёмкое; </li>
   <li>наукоёмкое. </li></ul>
 
-  <p class="osnp">В свою очередь, эти группы делятся на следующие отраслевые подгруппы:</p>
-  <ul class="osnn">
+  <p class="istp">В свою очередь, эти группы делятся на следующие отраслевые подгруппы:</p>
+  <ul class="istn">
   <li>тяжёлое машиностроение;
   <li>общее машиностроение;
   <li>среднее машиностроение;
@@ -48,11 +48,11 @@
   <li>производство металлических изделий и заготовок;
   <li>ремонт машин и оборудования.</li></ul>
 
-  <br><p class="osnp">Общее машиностроение</p>
-  <p class="osnn">Машиностроительная промышленность является ведущей отраслью народного хозяйства, которое определяет дальнейшее ускорение и развитие научно-технического процесса в других отраслях. Основными задачами машиностроения является непрерывное повышение качества машин и оборудования, совершенствование роста производительности труда на предприятиях. Выполнению этих задач способствуют организация работы на основе современных средств производства, внедрение передовой технологии и прогрессивной технологической оснастки.</p>
+  <br><p class="istp">Общее машиностроение</p>
+  <p class="istn">Машиностроительная промышленность является ведущей отраслью народного хозяйства, которое определяет дальнейшее ускорение и развитие научно-технического процесса в других отраслях. Основными задачами машиностроения является непрерывное повышение качества машин и оборудования, совершенствование роста производительности труда на предприятиях. Выполнению этих задач способствуют организация работы на основе современных средств производства, внедрение передовой технологии и прогрессивной технологической оснастки.</p>
 
-  <p class="osnp">Общее машиностроение представлено:</p>
-<ul class="osnn">
+  <p class="istp">Общее машиностроение представлено:</p>
+<ul class="istn">
 <li>транспортным машиностроением, состоящим в свою очередь из следующих отраслей:
 <ul><li>авиастроение (авиационная промышленность);</li>
     <li>автомобилестроение (автомобильная промышленность);</li>
@@ -63,9 +63,9 @@
 <li>оборонным производством, в том числе ракетно-космической отраслью.</li></ul>
 
 
-<p class="osnp">Тяжёлое машиностроение</p>
-<p class="osnp">Тяжёлое машиностроение<a class="osng"> — группа отраслей машиностроения, занятых разработкой и производством:</a></p>
-<ul class="osnn">
+<p class="istp">Тяжёлое машиностроение</p>
+<p class="istp">Тяжёлое машиностроение<a class="istg"> — группа отраслей машиностроения, занятых разработкой и производством:</a></p>
+<ul class="istn">
 <li>металлургического оборудования (металлургия);
 <li>горно-шахтного оборудования;
 <li>тяжёлого кузнечно-прессового оборудования;
@@ -74,17 +74,17 @@
 <li>оборудования для генерации и передачи электрической энергии (энергомашиностроение);
 <li>и другого оборудования. </li></ul>
 
-<p class="osnp">Разработка и производство технологического оборудования по отраслям:</p>
-<ul class="osnn">
+<p class="istp">Разработка и производство технологического оборудования по отраслям:</p>
+<ul class="istn">
 <li>строительное и коммунальное машиностроение;
 <li>сельскохозяйственное машиностроение;
 <li>нефтегазовое машиностроение
 <li>химическое машиностроение;
 <li>лесопромышленное машиностроение.</li></ul>
 
-<p class="osnp">Среднее машиностроение</p>
-<p class="osnp">В состав среднего машиностроения входят:</p>
-<ul class="osnn">
+<p class="istp">Среднее машиностроение</p>
+<p class="istp">В состав среднего машиностроения входят:</p>
+<ul class="istn">
 <li>автомобилестроение (автомобильная промышленность);
 <li>тракторостроение (тракторостроение);
 <li>станко-инструментальное машиностроение (станкостроение, инструментальная промышленность);
@@ -92,15 +92,15 @@
 <li>строительство роботов (робототехника);
 <li>строительство бытовых приборов (промышленность бытовых приборов и машин).</li></ul>
 
-<p class="osnn">В советское время Министерством среднего машиностроения (Минсредмаш) называлось ведомство, главными объектами которого были разработка и производство ядерного оружия. Оно было организовано в 1953 году, и в его структуру входили собственные рудники, заводы, НИИ, транспорт, сеть связи, вузы и пр.</p>
+<p class="istn">В советское время Министерством среднего машиностроения (Минсредмаш) называлось ведомство, главными объектами которого были разработка и производство ядерного оружия. Оно было организовано в 1953 году, и в его структуру входили собственные рудники, заводы, НИИ, транспорт, сеть связи, вузы и пр.</p>
 
-<p class="osnn">Точное машиностроение
+<p class="istn">Точное машиностроение
 <br>Точное машиностроение — изготовление деталей. Среди отраслей точного машиностроения приборостроение, электротехника, электроника.</p>
 
-<p class="osnn">Энергетическое машиностроение
+<p class="istn">Энергетическое машиностроение
 <br>Производство металлических изделий и заготовок</p>
 
-<p class="osnn">Основными элементами развития современного машиностроения является совершенствование средств производства, методов организации производства (к примеру использование технологий серийного и массового изготовления), переход к стандартизации, автоматизации и информационному обеспечению процессов.</p>
+<p class="istn">Основными элементами развития современного машиностроения является совершенствование средств производства, методов организации производства (к примеру использование технологий серийного и массового изготовления), переход к стандартизации, автоматизации и информационному обеспечению процессов.</p>
 
 <br><br><input type="button" name="btnnaz" class="btnkir kph3 kpa3" value="На главную" onclick="dom()"><br><br><br><br>
 </body>
