--- a/кроссворд/seven.html
+++ b/кроссворд/seven.html
@@ -72,7 +72,7 @@
    <!--  <col span="4"style="background-color: #ddd;"> Задаем цвет фона для следующего столбца таблицы -->
   </colgroup>
 
-  <caption class="captionk">Кроссворд</caption>
+  <caption class="captionk">Кроссворд «Термины в машиностроении»</caption>
   <tr>
     <td class="tdk"></td>
     <td class="tdk"></td>
@@ -88,7 +88,7 @@
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">1</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
@@ -120,7 +120,7 @@
     <td class="tdk"></td>
     <td class="truetd">н</td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">2</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
@@ -145,7 +145,7 @@
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">5</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="truetd">у</td>
@@ -171,7 +171,7 @@
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">4</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
@@ -188,7 +188,7 @@
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">11</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
@@ -199,7 +199,7 @@
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">3</td>
     <td class="truetd">м</td>
     <td class="truetd">а</td>
     <td class="truetd">ш</td>
@@ -220,7 +220,7 @@
     <td class="tdk"></td>
     <td class="truetd">л</td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">12</td>
     <td class="tdk"></td>
   </tr>
   <tr>
@@ -228,7 +228,7 @@
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">9</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="truetd">б</td>
@@ -269,7 +269,7 @@
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="truetd">м</td>
-    <td class="tdk"></td>
+    <td class="tdk">10</td>
     <td class="truetd">и</td>
     <td class="truetd">з</td>
     <td class="truetd">м</td>
@@ -286,7 +286,7 @@
   <tr>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">8</td>
     <td class="tdk"></td>
     <td class="truetd">б</td>
     <td class="tdk"></td>
@@ -332,7 +332,7 @@
     <td class="tdk"></td>
     <td class="truetd">и</td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">13</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
@@ -344,7 +344,7 @@
     <td class="tdk"></td>
   </tr>
   <tr>
-    <td class="tdk"></td>
+    <td class="tdk">6</td>
     <td class="truetd">б</td>
     <td class="truetd">а</td>
     <td class="truetd">л</td>
@@ -365,7 +365,7 @@
     <td class="truetd">ш</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">20</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="truetd">т</td>
@@ -388,7 +388,7 @@
     <td class="truetd">и</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">7</td>
     <td class="truetd">г</td>
     <td class="truetd">а</td>
     <td class="truetd">б</td>
@@ -411,7 +411,7 @@
     <td class="truetd">к</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">15</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
@@ -495,7 +495,7 @@
   </tr>
   <tr>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">14</td>
     <td class="truetd">н</td>
     <td class="truetd">а</td>
     <td class="truetd">к</td>
@@ -506,7 +506,7 @@
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">19</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
@@ -529,7 +529,7 @@
     <td class="truetd">о</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">17</td>
     <td class="tdk"></td>
     <td class="truetd">а</td>
     <td class="tdk"></td>
@@ -549,7 +549,7 @@
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">22</td>
     <td class="truetd">ш</td>
     <td class="tdk"></td>
   </tr>
@@ -570,7 +570,7 @@
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">21</td>
     <td class="truetd">к</td>
     <td class="truetd">а</td>
     <td class="truetd">л</td>
@@ -592,7 +592,7 @@
     <td class="truetd">а</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
-    <td class="tdk"></td>
+    <td class="tdk">18</td>
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="tdk"></td>
@@ -614,7 +614,7 @@
     <td class="tdk"></td>
   </tr>
 <tr>
-    <td class="tdk"></td>
+    <td class="tdk">16</td>
     <td class="truetd">д</td>
     <td class="truetd">а</td>
     <td class="truetd">в</td>
@@ -627,7 +627,7 @@
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="truetd">м</td>
-    <td class="tdk"></td>
+    <td class="tdk">23</td>
     <td class="truetd">о</td>
     <td class="truetd">б</td>
     <td class="truetd">е</td>
@@ -713,7 +713,7 @@
     <td class="tdk"></td>
     <td class="tdk"></td>
     <td class="truetd">и</td>
-    <td class="tdk"></td>
+    <td class="tdk">24</td>
     <td class="truetd">с</td>
     <td class="truetd">в</td>
     <td class="truetd">а</td>
